# scilla-parser

./: Cargo.toml  README.md
src/: build.rs  contract.rs  error.rs  field.rs  lib.rs  parser.rs  transition.rs  type.rs
src/parser/: contract.rs  field.rs  transition.rs  type.rs
tests/: test_parser.rs
tests/contracts/: SendZil.scilla  SetGet.scilla  multisig_wallet.scilla  ssnlist.scilla  staking_proxy_v2.scilla  stzil.scilla
