[package]
name = "scilla-parser"
version = "0.1.0"
edition = "2021"
description = "Scilla smart contract parser written in Rust"
license = "MIT"
repository = "https://github.com/its-saeed/scilla-parser"

[dependencies]
lexpr = "0.2.7"
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"
