[package]
name = "scilla-parser"
version = "0.10.0"
edition = "2021"
description = "Scilla smart contract parser written in Rust"
license = "MIT"
authors = ["Saeed dadkhah", "Saeed Dadkhah <saeed@zilliqa.com>"]
repository = "https://github.com/its-saeed/scilla-parser"
documentation = "https://docs.rs/scilla-parser"

[dependencies]
lexpr = "0.2.7"
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"
